# spectroscope

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: basic.rs
src/: history.rs  lib.rs  set_full.rs
